--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ IPTU/*
 GIS/SIRGAS_SHP_quadraMDSF.zip
 resultados/densidade_construtiva/IPTU_quadras_densidade_construtiva.gpkg
 resultados/densidade_construtiva/IPTU_quadras_area_contruida.gpkg
+resultados/densidade_construtiva/IPTU_quadras_area_contruida_ocupada.gpkg
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
