--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ GIS/SIRGAS_SHP_quadraMDSF.zip
 resultados/densidade_construtiva/IPTU_quadras_densidade_construtiva.gpkg
 resultados/densidade_construtiva/IPTU_quadras_area_contruida.gpkg
 resultados/densidade_construtiva/IPTU_quadras_area_contruida_ocupada.gpkg
+resultados/tipos_de_uso/IPTU_quadras_usos.gpkg
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
